# orgs_backend

./: .gitignore  Dockerfile  README.md  initialize_database.py  pyproject.toml  pytest.ini  settings.py
app/: db.sqlite3-shm  db.sqlite3-wal  dependecy.py  initialize_database.py  main.py  model.py  specs.py  test.db
app/lib/: auth.py  balance.py  cardano.py  cardano_tools.py  environment.py  group.py  utils.py
app/migrations/: add_payment_address.sql  add_task_fund_column.sql  add_user_balance_column.sql  make_group_nullable.sql  remove_org_type.sql
app/routers/: groups.py  organizations.py  tasks.py  users.py
app/samples/: create_users.sql  group.json  organization.json  task.json  users.json
migrations/models/: 1_20240105120314_None.py  2_20240105120510_add_balance_and_payment_address.py
tests/: conftest.py  fixtures.py  utils.ipynb
tests/api/: test_group.py  test_health.py  test_organization.py  test_task.py  test_user.py
tests/lib/: test_auth.py
